# samdul17food

./: .firebaserc  Dockerfile  README.md  firebase.json  pyproject.toml  requirements.txt
.firebase/: hosting.cHVibGlj.cache
public/: index.html
src/samdul17food/: main.py
