[project]
name = "samdul17food"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "WhiteCapella", email = "elnath1002@naver.com"},
]
dependencies = [
    "uvicorn[standard]>=0.30.6",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
